fixed for java1.4 compatibility